--- a/build.gradle
+++ b/build.gradle
@@ -26,9 +26,17 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 //	test를 위한 의존성
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+//	DB연결을 위한 의존성 (jdbc, mariadb 클라이언트)
+	implementation 'org.springframework.boot:spring-boot-starter-jdbc'
+	implementation 'org.mariadb.jdbc:mariadb-java-client'
+	testImplementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter-test:2.3.1'
 //	getter, setter 및 로그 관련 의존성
 	compileOnly 'org.projectlombok:lombok'
 	annotationProcessor 'org.projectlombok:lombok'
+//	Spring data jpa 의존성 추가
+	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+//	mybatis 관련 의존성 추가
+	implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:2.2.0'
 }
 
 tasks.named('test') {
